kubernetes/clusters/vcenter/apps/docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: mkdocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
      - name: docs
        image: squidfunk/mkdocs-material:latest
        ports:
        - containerPort: 8000
