kubernetes/clusters/vcenter/apps/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: mkdocs
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: docs
